syntax = "proto3";

package rpc.svca;

option go_package = "rpc/svca";

service AService {
  rpc CallServiceA(GetServiceARequest) returns (GetServiceAResponse);
}

message GetServiceARequest {
    int64 count = 1;
}

message GetServiceAResponse {
  repeated ServiceAResponse responses = 1;
}

message ServiceAResponse {
    string service_name = 1;
    string status = 2;
}