syntax = "proto3";

package rpc.svcb;

option go_package = "rpc/svcb";

service BService {
  rpc CallServiceB(GetServiceBRequest) returns (GetServiceBResponse);
}

message GetServiceBRequest {
    int64 count = 1;
}

message GetServiceBResponse {
  repeated ServiceBResponse responses = 1;
}

message ServiceBResponse {
    string service_name = 1;
    string status = 2;
}